--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "ext/vlib"]
 	path = ext/vlib
-	url = https://github.com/vsallaberry/vlib.git
+    url = https://github.com/vsallaberry/vlib.git
+    branch = master
