--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-*.o
-.*.swp
-.*.swo
-*~
 *.a
-*.dSYM/
-build/
-_src_.c
+*.class
+*.o
+*~
+.*.swo
+.*.swp
 .clang_complete
+.dSYM
+build.h
+libvsensors.a
+src/_src_.c
