--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-*.a
 *.class
 *.d
 *.o
 *~
 .*.swo
 .*.swp
-.clang_complete
-.dSYM
-Build.java
-build.h
-libvsensors.a
-src/FlexLexer.h
-src/_src_.c
-valgrind_*.log
+/.clang_complete
+/Build.java
+/build.h
+/libvsensors.a
+/obj/
+/src/FlexLexer.h
+/src/_src_.c
+/valgrind_*.log
