--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@
 /.clang_complete
 /Build.java
 /build.h
-/build.make
-/configure.log
+/config.h
+/config.log
+/config.make
 /libvsensors.a
 /obj/
 /src/FlexLexer.h
